tests/baselines/reference/assignFromBooleanInterface2.errors.txt
tests/cases/conformance/types/primitives/boolean/assignFromBooleanInterface2.ts(19,1): error TS2323: Type 'Boolean' is not assignable to type 'boolean'.
tests/cases/conformance/types/primitives/boolean/assignFromBooleanInterface2.ts(20,1): error TS2323: Type 'NotBoolean' is not assignable to type 'boolean'.


==== tests/cases/conformance/types/primitives/boolean/assignFromBooleanInterface2.ts (2 errors) ====
    interface Boolean {
        doStuff(): string;
    }
    
    interface NotBoolean {
        doStuff(): string;
    }
    
    var x = true;
    var a: Boolean;
    var b: NotBoolean;
    
    a = x;
    a = b;
    
    b = a;
    b = x;
    
    x = a; // expected error
    ~
!!! error TS2323: Type 'Boolean' is not assignable to type 'boolean'.
    x = b; // expected error
    ~
!!! error TS2323: Type 'NotBoolean' is not assignable to type 'boolean'.
    
    